--- a/Custom.Windows.LateralMovement.yaml
+++ b/Custom.Windows.LateralMovement.yaml
@@ -1,4 +1,7 @@
 name: Custom.Windows.LateralMovement
+
+author: Kostya Ilioukevitch and Phalgun Kulkarni
+
 description: |
    This artifact combines a plethora of lateral movement artifacts and provides normalized results.
    It also enhances investigations by saving the time used to find artifacts and filter useful information from multiple output formats.
