--- a/Custom.Windows.LateralMovement.yaml
+++ b/Custom.Windows.LateralMovement.yaml
@@ -69,6 +69,8 @@ description: |
       - Extracts evidence of Atera incoming connections from the Software registry hive
    - AnyDesk
       - Leverages the exchange AnyDesk artifact to parse the AnyDesk log files on destination system
+   - Splashtop
+      - Extracts evidence of Splashtop incoming connections from the Software registry hive
 
    Artifacts used as inspiration or wrapper:
 
@@ -416,6 +418,10 @@ sources:
           }, v={
             SELECT *
             FROM source(artifact="Custom.Windows.LateralMovement/SMB Client Connectivity EVTX")
+            LIMIT 50
+          }, w={
+            SELECT *
+            FROM source(artifact="Custom.Windows.LateralMovement/Splashtop Connections")
             LIMIT 50
           })
 
@@ -1258,3 +1264,41 @@ sources:
           AND UserAccount =~ UserAccountRegex
           AND EventTime > DateAfterTime
           AND EventTime < DateBeforeTime
+
+  - name: Splashtop Connections
+    description: Returns evidence of Remote Access using Splashtop from the Software registry hive.
+    query: |
+
+        LET hostname <= SELECT Hostname FROM info()
+
+        LET DateAfterTime <= if(condition=DateAfter,
+          then=timestamp(epoch=DateAfter), else=timestamp(epoch="1600-01-01"))
+        LET DateBeforeTime <= if(condition=DateBefore,
+          then=timestamp(epoch=DateBefore), else=timestamp(epoch="2200-01-01"))
+
+        SELECT Key.ModTime AS EventTime,
+               "Remote access using Splashtop" AS Description,
+               "HLMK Software hive Splashtop keys" AS ArtifactSource,
+               DeviceName AS SourceSystem,
+               if(condition = Client_IP =~ '''(\b25[0-5]|\b2[0-4][0-9]|\b[01]?[0-9][0-9]?)(\.(25[0-5]|2[0-4][0-9]|[01]?[0-9][0-9]?)){3}''',
+               then = Client_IP,
+               else = "-") AS SourceIpAddress,
+               hostname[0].Hostname AS DestinationSystem,
+               "-" AS DestinationIpAddress,
+               if(condition= UserAccount =~ '''^[a-zA-Z0-9]{2,}.*''',
+               then= UserAccount,
+               else="-") AS UserAccount,
+               "Inbound" AS Direction,
+               dict(`Email ID` = if (condition = Client_SPID =~ '''.*@[a-zA-Z0-9].*\.[a-zA-Z]{2,}''',
+                                 then = Client_SPID,
+                                 else="-"),
+                    `Device ID` = DeviceID,
+                    `App Version` = AppVersion,
+                    `UDID` = UDID,
+                    `Artifact Source Path` = Key.FullPath,
+                    `Interactive` = "Yes",
+                    `ConfidenceLevel` = "Strong") AS AddInfo
+        FROM read_reg_key(globs="HKEY_LOCAL_MACHINE\\SOFTWARE\\WOW6432Node\\Splashtop Inc.\\Splashtop Remote Server\\ClientInfo")
+        WHERE UserAccount =~ UserAccountRegex
+          AND Key.Mtime > DateAfterTime
+          AND Key.Mtime < DateBeforeTime
